fix overflow x

--- a/src/views/board/board.module.css
+++ b/src/views/board/board.module.css
@@ -1,3 +1,8 @@
+.content {
+  overflow-x: hidden;
+  overflow-y: visible;
+}
+
 .footer {
   color: var(--post-mobile-abbr-text-color);
   padding: 15px 0 20px 5px;
